# libvazzy

./: .gitignore  README.md  meson.build
.github/workflows/: CI-auto-update.yml
build-aux/sisyphus/: libvazzy.spec
doc/: meson.build
lib/: damerau-levenshtein-distance.vala  main.vala  meson.build
tests/: damerau-levenshtein-distance-test.vala  meson.build
vala-checkers/: empty_lines_checker.py  indentation_checker.py
